<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="help_message">For help with your rental, please reach out to one of our agents and provide more details.</string>
    <string name="help">Help</string>
    <string name="booking_cancel_loading">Cancelling booking...</string>
    <string name="bookin_cancel_title">Are you sure you want to cancel?</string>
    <string name="booking_cancel_message">You will not be charged</string>
    <string name="cancel">Cancel</string>
    <string name="connecting_loader">Connecting...</string>
    <string name="booking_begin_trip">Begin</string>
    <string name="starting_ride_loader">Starting Rental</string>
    <string name="reserve">Reserve</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="private_networks">Private Networks</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="ride_history">Rental History</string>
    <string name="report_damage">Report Damage</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_title">Logging Out</string>
    <string name="log_out_message">Are you sure you want to Log Out?</string>
    <string name="confirm">Confirm</string>
    <string name="report_theft">Report Theft</string>
    <string name="end_ride">End Rental</string>
    <string name="submit">Submit</string>
    <string name="rate_your_ride">Rate your rental</string>
    <string name="end_ride_loader">Ending rental...</string>
    <string name="payment">Payment</string>
    <string name="theft_report_loader">Reporting theft</string>
    <string name="report_theft_title">You cannot find your ride anywhere?</string>
    <string name="report_theft_message">Reporting theft will end your rental</string>
    <string name="theft_report_success_message">Thanks for letting us know\nWe’ll be in touch if we need any more information from you</string>
    <string name="theft_report_success_title">Theft has been reported</string>
    <string name="damage_report_success_title">Thanks!</string>
    <string name="damage_report_loader">Submitting damage report</string>
    <string name="damage_report_success_message">What would you like to do now?</string>
    <string name="damage_report_title">Submit report</string>
    <string name="damage_report_notes">Notes</string>
    <string name="damage_report_photo">Photo of damage</string>
    <string name="damage_report_success_continue_ride">Continue my rental</string>
    <string name="damage_report_success_continue_booking">Continue</string>
    <string name="damage_report_success_cancel_booking">Cancel booking</string>
    <string name="log_in">Log In</string>
    <string name="log_in_loader">Logging in...</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up_loader">Creating Account...</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="email_invalid">This email address is invalid</string>
    <string name="password">Password</string>
    <string name="password_invalid">Password must be between 8 - 16 characters long</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="password_updated_title">Password reset sccessful</string>
    <string name="password_updated_message">You have successfully reseted your password and are able to log in</string>
    <string name="general_error_message">It looks like there was an error</string>
    <string name="general_error_title">Warning</string>
    <string name="no_account_exists_message">No account exists for the email address entered</string>
    <string name="no_account_exists_title">There was a problem</string>
    <string name="save">Save</string>
    <string name="saving_payment_card_loader">Saving credit card...</string>
    <string name="payment_card_added_message">Credit card was successfully added!</string>
    <string name="delete">Delete</string>
    <string name="credit_card_invalid_message">The credit card details you entered seems to be invalid. Please check the numbers and re-enter or try a different card.</string>
    <string name="credit_card_delete_message">By choosing delete credit card, the credit card will be removed from your account</string>
    <string name="credit_card_selecting_loader">Setting credit card as primary</string>
    <string name="removing_payment_method_failed">Fail to delete card at this moment</string>
    <string name="close">Close</string>
    <string name="removing_payment_method_loader">Deleting credit card...</string>
    <string name="add_credit_card">Add credit card</string>
    <string name="add_private_network">Add a private network</string>
    <string name="sending_confirmation_code">Sending confirmation code</string>
    <string name="no_private_networks_for_email">This email does not provide access to any private networks\n\n</string>
    <string name="use_another_email">Use another email</string>
    <string name="ride_details">Rental Details</string>
    <string name="ride_cost">Rental cost</string>
    <string name="vehicle">Vehicle</string>
    <string name="welcome_terms_and_privacy_text">By tapping Sign Up, or Log In, I agree to %1$s’\n&lt;a href=\&quot;%2$s\&quot;&gt;Terms of Service&lt;/a&gt;, and &lt;a href=\&quot;%3$s\&quot;&gt;Privacy Policy&lt;/a&gt;.</string>
    <string name="welcome">Welcome</string>
    <string name="create_an_account">Sign up</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="verifying">Verifying...</string>
    <string name="verify_email">Verify Email</string>
    <string name="verification_code_description">A verification code was sent to your email. Enter it below. Tap resend if you didn’t get the email.</string>
    <string name="change">Change</string>
    <string name="resend">resend</string>
    <string name="restore_password">Restore Password</string>
    <string name="label_per">per</string>
    <string name="label_enter_location">Pick up location</string>
    <string name="label_find_new_ride">Find new rental</string>
    <string name="label_scan">Scan</string>
    <string name="bike_detail_label_trip_costs">Trip Costs</string>
    <string name="bike_detail_label_price">Base Fare</string>
    <string name="bike_detail_label_parking_fee">Parking Fee</string>
    <string name="bike_detail_label_about_the_bike">About\u0020</string>
    <string name="bike_detail_label_name">Name</string>
    <string name="bike_detail_label_model">Type</string>
    <string name="bike_detail_label_network">Network</string>
    <string name="bike_detail_label_terms_condition">Terms &amp; Conditions</string>
    <string name="bike_detail_label_parking_zones_spots">Parking zones &amp; spots</string>
    <string name="bike_detail_label_parking_fee_warning">Fee is charged if you park outside of selected zones</string>
    <string name="bike_detail_bike_cost_free">FREE</string>
    <string name="label_good_morning">Good morning</string>
    <string name="label_good_afternoon">Good afternoon</string>
    <string name="label_good_evening">Good evening</string>
    <string name="action_loginfailed_description">The password you have entered is incorrect</string>
    <string name="general_btn_ok">OK</string>
    <string name="error_confirmation_code">Invalid confirmation code</string>
    <string name="signup_account_exists_text">We cannot create a new account with this email</string>
    <string name="hint_enter_code">Enter code</string>
    <string name="label_note">Note</string>
    <string name="mandatory_phone_text">Please add a phone number to your account to use this fleet</string>
    <string name="mandatory_phone_action">Add phone number</string>
    <string name="add_card_description">A credit card must be registered to access any networks requiring payment</string>
    <string name="add_card">ADD CARD</string>
    <string name="cancel_capital">CANCEL</string>
    <string name="enter_your_new_phone_number">Enter your new phone number</string>
    <string name="bike_details_terms_policy">By tapping Confirm I agree to the &lt;a href=\&quot;%s\&quot;&gt;Terms and Conditions&lt;/a&gt;.</string>
    <string name="reserved_label">Reserved</string>
    <string name="walk_to_bike_label">Walk to vehicle</string>
    <string name="time_label">Time</string>
    <string name="end_ride_unselected">Lock to end rental</string>
    <string name="booking_timer_expired_label">Time ran out! Your rental has started. Continue to make your way to the rental location and press begin rental.</string>
    <string name="end_ride_sub_title">Make sure you complete the end of rental checklist.</string>
    <string name="end_ride_parking_title_authorized">Parked in authorized area?</string>
    <string name="end_ride_parking_sub_title_authorized">Confirm you parked the vehicle in an authorized area.</string>
    <string name="end_ride_locked_title">Is the vehicle locked?</string>
    <string name="end_ride_locked_sub_title">Confirm you locked the vehicle properly.</string>
    <string name="end_ride_photo_title">Comfirm with photo?</string>
    <string name="end_ride_photo_sub_title">Take a photo of your locked vehicle by clicking the button below.\u0020</string>
    <string name="booking_cancel_confirm">Yes, cancel my reservation</string>
    <string name="parking_restricted_warning_message">You cannot end rental here. Please enter any parking zone or move to a parking spot.</string>
    <string name="active_ride_parking_out_of_bounds_text">You are outside the parking zone for this network. If you end your rental here you\'ll incur an upcharge fee of %s</string>
    <string name="active_ride_out_of_zones_text">You are currently not in an authorized parking spot or zone.</string>
    <string name="active_ride_out_of_zones_title">Out of bound</string>
    <string name="ride_find_nearby_zone">Find nearby zone</string>
    <string name="general_status_error_text">Sorry, we cannot connect to the server at this moment.</string>
    <string name="general_status_error_title">Server error</string>
    <string name="loading">Loading...</string>
    <string name="label_next">Submit</string>
    <string name="ride_summary_rate_label">Rate your trip</string>
    <string name="ride_summary_total_label">Total</string>
    <string name="private_fleet">Private fleet</string>
    <string name="memberships">Memberships</string>
    <string name="report_an_issue">Report an issue</string>
    <string name="logout">Logout</string>
    <string name="profile_settings_label">Profile &amp; Settings</string>
    <string name="add_new_card">Add New Card</string>
    <string name="card_number">Card Number</string>
    <string name="no_private_fleet">You don’t have access to any private fleet.\u0020\u0020</string>
    <string name="add_private_fleet">Add a private fleet</string>
    <string name="where_can_i_park">WHERE CAN I PARK?</string>
    <string name="you_can_park_anywhere">You can park anywhere within parking zones or at any parking spots.\n\nZoom out to see parking zones and parking spots.</string>
    <string name="no_parking_restrictions">There are no set parking restrictions on this network. We recommend finding appropriate, secure parking such as a bike rack or similar.</string>
    <string name="become_a_member">Become a member to unlock savings on rentals</string>
    <string name="join_today">Join today</string>
    <string name="membership_price">For just %1$s/%2$s</string>
    <string name="membership_perk">Become a member to save %s%% off on every rental.\u0020\u0020Cancel at any time.\u0020</string>
    <string name="reservations">Reservations</string>
    <string name="your_memberships">Your Memberships</string>
</resources>