<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/private_fleets_no_fleets"
    android:background="@color/private_fleets_background"
    tools:context="com.lattis.lattis.presentation.fleet.PrivateFleetActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/btn_close_in_slider"
        android:id="@+id/iv_close_in_private_fleets_no_fleets"
        />


    <com.lattis.lattis.presentation.customview.CustomTextView
        app:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/iv_close_in_private_fleets_no_fleets"
        android:id="@+id/ct_title_in_private_fleets_no_fleets"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/private_fleet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:textColor="@color/private_fleets_text"
        custom:typefaceAsset="GothamSSm-Book.otf"
        />


    <com.lattis.lattis.presentation.customview.CustomTextView
        app:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintTop_toBottomOf="@+id/ct_title_in_private_fleets_no_fleets"
        android:id="@+id/ct_message_in_private_fleets_no_fleets"
        android:text="@string/no_private_fleet"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/private_fleets_text"
        custom:typefaceAsset="GothamSSm-Book.otf"
        />


    <com.lattis.lattis.presentation.customview.CustomButton
        android:id="@+id/btn_add_private_fleets_no_fleets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        custom:layout_constraintStart_toStartOf="parent"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/add_private_fleet"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:background="@drawable/round_add_private_fleet"
        android:textColor="@color/private_fleets_add_private_fleets_text"
        custom:typefaceAsset="GothamSSm-Medium.otf" />
</androidx.constraintlayout.widget.ConstraintLayout>