<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/payment_add_new_card"
    android:background="@color/payment_background"
    tools:context="com.lattis.lattis.presentation.payment.PaymentActivity">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/btn_close_in_slider"
        android:id="@+id/iv_close_in_payment_add_new_card"
        />


    <com.lattis.lattis.presentation.customview.CustomTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_close_in_payment_add_new_card"
        android:id="@+id/ct_title_in_payment_add_new_card"
        android:layout_marginLeft="20dp"
        android:text="@string/add_new_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:textColor="@color/payment_text"
        app:typefaceAsset="GothamSSm-Book.otf"
        />


    <com.lattis.lattis.presentation.customview.CustomTextView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ct_title_in_payment_add_new_card"
        android:id="@+id/ct_message_in_payment_no_card"
        android:text="@string/card_number"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:textColor="@color/payment_text"
        app:typefaceAsset="GothamSSm-Book.otf"
        />


    <com.stripe.android.view.CardInputWidget
        android:id="@+id/card_multiline_widget_in_payment_add_credit_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:shouldShowPostalCode="false"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:visibility="visible"

        app:layout_constraintTop_toBottomOf="@+id/ct_message_in_payment_no_card"
        />

    <com.lattis.lattis.presentation.customview.CustomButton
        android:id="@+id/btn_save_credit_card_in_payment_add_new_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/save"
        android:textSize="16dp"
        android:textAllCaps="false"
        android:background="@drawable/round_black_save"
        android:textColor="@color/payment_save_credit_card_text"
        app:typefaceAsset="GothamSSm-Medium.otf" />
</androidx.constraintlayout.widget.ConstraintLayout>